--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,38 @@
+@import "/libs/flexboxgrid.scss";
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,400;0,600;0,700;1,800&family=Poppins:ital,wght@0,400;0,500;0,700;1,600&display=swap");
+@import "reset.scss";
+@import "hero.scss";
+@import "slider.scss";
+@import "globally-accepted.scss";
+@import "footer.scss";
+@import "mixins.scss";
 body {
-  background-color: antiquewhite;
+	background-color: #e5e5e5;
+	font-family: "Poppins", sans-serif;
+	font-weight: 400;
+	font-size: 24px;
+	line-height: 180%;
+	letter-spacing: 0.02em;
+	color: #2c2d32;
 }
+.container {
+	margin: 0 auto;
+	width: 100%;
+	max-width: 1920px;
+	background-color: #ffffff;
+}
+.toast {
+	display: inline-flex;
+	background-color: #2c2d32;
+	padding: 30px;
+	border-radius: 8px;
+	color: #ffffff;
+	position: fixed;
+	top: 4.5%;
+	right: 16.1%;
+	z-index: 1;
+}
+.hidden {
+	display: none;
+}
+
