--- a/src/globally-accepted.scss
+++ b/src/globally-accepted.scss
@@ -4,4 +4,104 @@
 	font-size: 44px;
 	line-height: 180%;
 	margin-bottom: 20px;
+	@include adaptive-font(44, 24);
+}
+.section2__text {
+	margin-bottom: 80px;
+	@include adaptive-font(24, 16);
+}
+.journey-kind {
+	gap: 100px;
+}
+.section2__square {
+	width: 100%;
+	height: 100%;
+	max-width: 600px;
+	max-height: 400px;
+	border: 1px solid #000000;
+	border-radius: 20px;
+	font-weight: 600;
+	font-size: 32px;
+	line-height: 48px;
+	text-align: center;
+	color: #ffffff;
+	position: relative;
+	padding: 132px 158px 123px;
+	margin-bottom: 336px;
+	opacity: 0.9;
+}
+.square__left {
+	background: #7f2736 no-repeat center url("assets/images/backpack.png");
+}
+.square__right {
+	background: #7f2736 no-repeat center url("assets/images/earth.png");
+}
+.section2__square::before {
+	content: "";
+	width: 100%;
+	height: 100%;
+	max-width: 600px;
+	max-height: 400px;
+	position: absolute;
+	background-color: #7f2736;
+	opacity: 0.8;
+	border: none;
+	border-radius: 20px;
+	top: 0;
+	left: 0;
+	z-index: 1;
+	opacity: 0.8;
+}
+.content__wrapper {
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+	z-index: 1;
+}
+.square__title {
+	padding-bottom: 17px;
+}
+.square__button {
+	color: inherit;
+	background-color: inherit;
+	border: 1px solid #ffffff;
+	border-radius: 80px;
+	font-size: 22px;
+	font-weight: 500;
+	line-height: 33px;
+	padding: 23px 58px;
+}
+.video-background {
+	width: 100%;
+	max-width: 1580px;
+	background: #f0c53e;
+	border-radius: 20px;
+	margin-bottom: 208px;
+}
+.latest-tour__title {
+	font-weight: 500;
+	line-height: 160%;
+	padding-left: 41px;
+	padding-top: 87px;
+	padding-bottom: 27px;
+	@include adaptive-font(36, 18);
+}
+.latest-tour__text {
+	padding: 41px;
+	@include adaptive-font(24, 16);
+}
+.link {
+	font-size: 22px;
+	line-height: 180%;
+	text-decoration-line: underline;
+	color: #ee5060;
+	padding-left: 41px;
+	padding-bottom: 48px;
+}
+.video {
+	width: 100%;
+	max-width: 705px;
+	max-height: 470px;
+	padding: 0 37px;
 }
