--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@
 @import "hero.scss";
 @import "slider.scss";
 @import "globally-accepted.scss";
+@import "ourteam.scss";
 @import "footer.scss";
 @import "mixins.scss";
 body {
