--- a/src/hero-header.scss
+++ b/src/hero-header.scss
@@ -1,17 +1,11 @@
-@import "mixins.scss";
 .hero {
 	background-color: #f0c53e;
-}
-.header {
-	padding-top: 60px;
-	display: flex;
-	justify-content: space-around;
-	flex-flow: row wrap;
+	padding-top: 86px;
+	margin-bottom: -4px;
 }
 .logo {
-	margin-top: 20px;
-	margin-right: 369px;
 	position: relative;
+	top: -25px
 }
 .square {
 	height: 60px;
@@ -41,19 +35,26 @@
 	color: #ffffff;
 	z-index: 1;
 }
-.navigation__wrapper {
-	display: flex;
-	align-items: center;
-	flex-flow: row wrap;
-}
 .navigation {
 	display: flex;
 	column-gap: 80px;
+	gap: 80px;
 	line-height: 33px;
 	color: #252641;
-	margin-right: 133px;
-	flex-flow: row wrap;
 	@include adaptive-font(22, 16);
+}
+@media (max-width: 1630px) {
+	.navigation {
+		flex-direction: column;
+		gap: 10px;
+	}
+}
+@media (max-width: 768px) {
+	.navigation {
+		flex-direction: column;
+		gap: 10px;
+		margin-top: 50px;
+	}
 }
 .phone-number {
 	background: #b25a59;
@@ -102,18 +103,7 @@
 	left: 40px;
 }
 .hero__main {
-	display: flex;
-	flex-direction: row-reverse;
-	justify-content: space-between;
-	align-items: center;
-	margin: 105px;
-	margin-bottom: -5px;
-}
-.hero__picture {
-	min-width: 350px;
-}
-.hero__info {
-	margin-right: 129px;
+	margin-top: 192px;
 }
 .hero__slogan {
 	font-family: "Nunito Sans", sans-serif;
@@ -121,6 +111,7 @@
 	line-height: 74px;
 	margin-bottom: 48px;
 	@include adaptive-font(54, 24);
+	text-align: left;
 }
 .red {
 	color: #7f2736;
@@ -131,6 +122,7 @@
 	margin-bottom: 52px;
 	padding-right: 200px;
 	@include adaptive-font(24, 16);
+	text-align: left;
 }
 .hero__buttons {
 	display: flex;
@@ -177,84 +169,4 @@
 .watch__text {
 	margin-left: 36px;
 	color: #252641;
-}
-@media (max-width: 992px) {
-	.header {
-		flex-flow: column wrap;
-		align-items: center;
-	}
-	.navigation__wrapper {
-		display: flex;
-		flex-direction: column;
-		align-items: flex-start;
-	}
-	.navigation {
-		display: flex;
-		flex-direction: column;
-		align-items: flex-start;
-	}
-	.hero__main {
-		display: flex;
-		align-items: center;
-		flex-direction: column;
-		margin: 20px;
-		margin-bottom: -5px;
-	}
-	.hero__info {
-		margin-right: 0px;
-		display: flex;
-		justify-content: center;
-		flex-wrap: wrap;
-	}
-	.hero__slogan {
-		line-height: normal;
-		display: flex;
-		flex-flow: column wrap;
-	}
-	.hero__text {
-		padding-right: 20px;
-	}
-	.hero__picture {
-		max-width: 350px;
-	}
-	.hero__buttons {
-		display: flex;
-		flex-direction: column;
-	}
-	.explore {
-		padding: 12px 16px;
-		margin-bottom: 20px;
-	}
-}
-@media (max-width: 1494px) {
-	.logo {
-		margin-left: 90px;
-	}
-	.navigation {
-		margin-top: 70px;
-	}
-	.phone-number {
-		margin-left: 20px;
-	}
-}
-@media (max-width: 768px) {
-	.header {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-	}
-	.navigation {
-		margin-right: 0px;
-	}
-	.phone-number {
-		margin-left: 0;
-		align-self: center;
-	}
-	.phone-number .phone {
-		top: 5px;
-		left: 50px;
-	}
-	.number {
-		display: none;
-	}
 }
