--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,15 @@
+@import "mixins.scss";
 @import "/libs/flexboxgrid.scss";
 @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,400;0,600;0,700;1,800&family=Poppins:ital,wght@0,400;0,500;0,700;1,600&display=swap");
 @import "reset.scss";
-@import "hero.scss";
+@import "hero-header.scss";
+// @import "hero.scss";
 @import "slider.scss";
 @import "globally-accepted.scss";
 @import "ourteam.scss";
+@import "promise.scss";
+@import "latest.scss";
 @import "footer.scss";
-@import "mixins.scss";
 body {
 	background-color: #e5e5e5;
 	font-family: "Poppins", sans-serif;
@@ -25,12 +28,12 @@ body {
 .toast {
 	display: inline-flex;
 	background-color: #2c2d32;
-	padding: 30px;
+	padding: 35px;
 	border-radius: 8px;
 	color: #ffffff;
 	position: fixed;
 	top: 4.5%;
-	right: 16.1%;
+	right: 27.8%;
 	z-index: 1;
 }
 .hidden {
