--- a/src/ourteam.scss
+++ b/src/ourteam.scss
@@ -182,3 +182,11 @@
 		margin: 0;
 	}
 }
+@media (max-width: 767px) {
+	.section3 {
+		margin-top: -150px;
+	}
+	.review__picture {
+		margin-top: -20px;
+	}
+}
