--- a/src/globally-accepted.scss
+++ b/src/globally-accepted.scss
@@ -72,6 +72,12 @@
 	line-height: 33px;
 	padding: 23px 58px;
 }
+.square__button:hover {
+	background-color: #B25A59;
+}
+.square__button:active {
+	background-color: #23BDEE;;
+}
 .video-background {
 	width: 100%;
 	max-width: 1580px;
@@ -99,9 +105,26 @@
 	padding-left: 41px;
 	padding-bottom: 48px;
 }
+.link__learn:hover {
+	color: #ffffff;
+}
+.link__learn:active {
+	color:#23BDEE
+}
 .video {
 	width: 100%;
 	max-width: 705px;
 	max-height: 470px;
 	padding: 0 37px;
+}
+@media (max-width: 767px) {
+	.section2__title {
+		margin-top: 20px;
+	}
+	.section2__text {
+		margin-bottom: 20px;
+	}
+	.section2__square {
+		margin-bottom: 190px;
+	}
 }
