--- a/src/slider.scss
+++ b/src/slider.scss
@@ -57,3 +57,9 @@
 	max-width: 440px;
 	max-height: 440px;
 }
+@media (max-width: 767px) {
+	.left, .right {
+		position: absolute;
+		z-index: 1;
+	}
+}
