--- a/src/slider.scss
+++ b/src/slider.scss
@@ -11,11 +11,6 @@
 	padding: 20px;
 	margin-bottom: 61px;
 }
-@media (max-width: 992px) {
-	.section1__title {
-		margin-top: 50px;
-	}
-}
 .section1__slider {
 	display: flex;
 	flex-direction: row;
@@ -50,6 +45,7 @@
 	transition: all ease 1s;
 	position: relative;
 	left: -20px;
+	padding-right: 50px;
 }
 .destination {
 	border-radius: 8px;
@@ -57,9 +53,22 @@
 	max-width: 440px;
 	max-height: 440px;
 }
+@media (max-width: 992px) {
+	.section1__title {
+		margin-top: 50px;
+	}
+	.destination {
+		max-width: 200px;
+	}
+}
 @media (max-width: 767px) {
+	.button-left__container, .button-right__container {
+		position: relative;
+	}
 	.left, .right {
 		position: absolute;
+		top: -50px;
+		left: 0;
 		z-index: 1;
 	}
 }
